Fix pixel wide gap between Evals menu and dropdown children
Fix pixel wide gap between Evals menu and dropdown children

--- a/docroot/css/osu_portlets.css
+++ b/docroot/css/osu_portlets.css
@@ -710,7 +710,7 @@
 .osu-cws .portlet-action-menu li:hover ul,
 .osu-cws .portlet-action-menu li.sfHover ul {
       left: 0;
-      top: 43px;
+      top: 42px;
 }
 
 .osu-cws .portlet-top-menu .portlet-action-menu li.pass-roles:hover ul,
